native-touch работает

--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,8 @@
         <link rel='stylesheet' href='css/index.css'>
         <script type='text/javascript' src='js/lib/jquery/2.1.1/jquery.js'></script>
         <script type='text/javascript' src='js/index.js'></script>
-        <script type='text/javascript' src='js/native-mouse.js'></script>
+        <script type='text/javascript' src='js/native-click.js'></script>
+        <script type='text/javascript' src='js/native-touch.js'></script>
     </head>
     <body>
         <div id='container'></div>
